--- a/testimonial.html
+++ b/testimonial.html
@@ -125,7 +125,7 @@
                 <div class="quote">“</div>
                 <p class="mt-5 fs-5">
                   "Belay Tech connected me with an incredible virtual assistant.
-                  She handles my emails, calendar, and travel I finally have my
+                  my handles are emails, calendar, and travel I finally have my
                   life back!"
                 </p>
                 <div class="d-flex align-items-center mt-4">
@@ -385,3 +385,4 @@
     }
   </style>
 </html>
+
